--- a/by-springBoot-devTools/pom.xml
+++ b/by-springBoot-devTools/pom.xml
@@ -87,6 +87,12 @@
             <version>4.4.0</version>
         </dependency>
 
+        <!-- Jackson for JSON处理 -->
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+        </dependency>
+
     </dependencies>
 
 
