--- a/by-cloud-gateway/src/main/resources/application.yaml
+++ b/by-cloud-gateway/src/main/resources/application.yaml
@@ -11,9 +11,6 @@ register:
   password: ${RGISTER_PASSWORD:nacos}
 
 spring:
-  main:
-    allow-bean-definition-overriding: true
-    web-application-type: reactive
   application:
     name: bdd-cloud-gateway
   config:
@@ -53,26 +50,10 @@ spring:
             # 跨域检测的有效期,单位s
             maxAge: 36000
       routes:
-        - id: service-product
-          uri: lb://service-product
+        - id: bdd-cloud-service-upms
+          uri: lb://bdd-cloud-service-upms
           predicates:
-            - Path=/*/product/**
-        - id: service-user
-          uri: lb://service-user
-          predicates:
-            - Path=/*/user/**
-        - id: service-cart
-          uri: lb://service-cart
-          predicates:
-            - Path=/api/order/cart/**
-        - id: service-order
-          uri: lb://service-order
-          predicates:
-            - Path=/api/order/orderInfo/**
-        - id: service-pay
-          uri: lb://service-pay
-          predicates:
-            - Path=/api/order/alipay/**
+            - Path=/sysUser/**,/sysMenu/**
 logging:
   level:
     org.springframework.security: DEBUG
