--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,8 @@
         <jakarta.servlet.version>6.0.0</jakarta.servlet.version>
         <!-- Knife4j 版本 -->
         <knife4j.version>4.4.0</knife4j.version>
+        <!-- 动态数据源 Spring Boot 3.x 使用-->
+        <dynamic-datasource.version>4.1.3</dynamic-datasource.version>
     </properties>
 
     <!-- 依赖管理 -->
@@ -109,6 +111,13 @@
                 <groupId>com.github.xiaoymin</groupId>
                 <artifactId>knife4j-openapi3-jakarta-spring-boot-starter</artifactId>
                 <version>${knife4j.version}</version>
+            </dependency>
+
+            <!-- 动态数据源 Spring Boot 3.x 使用-->
+            <dependency>
+                <groupId>com.baomidou</groupId>
+                <artifactId>dynamic-datasource-spring-boot3-starter</artifactId>
+                <version>${dynamic-datasource.version}</version>
             </dependency>
 
 
