--- a/by-dynamic-data-source/pom.xml
+++ b/by-dynamic-data-source/pom.xml
@@ -112,6 +112,13 @@
             <version>4.1.3</version>
         </dependency>
 
+        <!-- JSON处理 -->
+        <dependency>
+            <groupId>com.alibaba.fastjson2</groupId>
+            <artifactId>fastjson2</artifactId>
+            <version>2.0.51</version> <!-- 使用2.0.51及以上版本 -->
+        </dependency>
+
     </dependencies>
 
 
