--- a/by-dynamic-data-source/src/main/resources/application.yaml
+++ b/by-dynamic-data-source/src/main/resources/application.yaml
@@ -12,7 +12,7 @@ spring:
           driver-class-name: com.mysql.cj.jdbc.Driver
           url: jdbc:mysql://localhost:3306/by_master?useUnicode=true&characterEncoding=utf8&useSSL=false&serverTimezone=Asia/Shanghai&allowPublicKeyRetrieval=true
           username: root
-          password: 123456
+          password: root
           hikari:
             maximum-pool-size: 20
             minimum-idle: 5
@@ -25,7 +25,7 @@ spring:
           driver-class-name: com.mysql.cj.jdbc.Driver
           url: jdbc:mysql://localhost:3306/by_deputy?useUnicode=true&characterEncoding=utf8&useSSL=false&serverTimezone=Asia/Shanghai&allowPublicKeyRetrieval=true
           username: root
-          password: 123456
+          password: root
           hikari:
             maximum-pool-size: 15  # 读库可以设置较小的连接池
             minimum-idle: 3
