--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,8 @@
         <knife4j.version>4.4.0</knife4j.version>
         <!-- 动态数据源 Spring Boot 3.x 使用-->
         <dynamic-datasource.version>4.1.3</dynamic-datasource.version>
+        <!-- JSON处理 -->
+        <fastjson2.version>2.0.51</fastjson2.version>
     </properties>
 
     <!-- 依赖管理 -->
@@ -118,6 +120,12 @@
                 <groupId>com.baomidou</groupId>
                 <artifactId>dynamic-datasource-spring-boot3-starter</artifactId>
                 <version>${dynamic-datasource.version}</version>
+            </dependency>
+            <!-- JSON处理 -->
+            <dependency>
+                <groupId>com.alibaba.fastjson2</groupId>
+                <artifactId>fastjson2</artifactId>
+                <version>${fastjson2.version}</version> <!-- 使用2.0.51及以上版本 -->
             </dependency>
 
 
