--- a/by-springBoot-lesson01/pom.xml
+++ b/by-springBoot-lesson01/pom.xml
@@ -125,6 +125,12 @@
             <version>1.3.0</version>
         </dependency>
 
+        <!-- AOP -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-aop</artifactId>
+        </dependency>
+
 
     </dependencies>
 
