--- a/by-springBoot-lesson01/pom.xml
+++ b/by-springBoot-lesson01/pom.xml
@@ -131,6 +131,13 @@
             <artifactId>spring-boot-starter-aop</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>com.by</groupId>
+            <artifactId>by-cloud-common</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+
+
 
     </dependencies>
 
