--- a/by-springBoot-lesson02/pom.xml
+++ b/by-springBoot-lesson02/pom.xml
@@ -47,11 +47,11 @@
             <artifactId>httpclient5</artifactId>
             <version>5.2.1</version>
         </dependency>
-        <dependency>
-            <groupId>org.apache.httpcomponents.core5</groupId>
-            <artifactId>httpcore5</artifactId>
-            <version>5.2</version>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>org.apache.httpcomponents.core5</groupId>-->
+<!--            <artifactId>httpcore5</artifactId>-->
+<!--            <version>5.2</version>-->
+<!--        </dependency>-->
 
 
         <!-- Spring Boot 测试依赖，提供测试支持 -->
