--- a/by-cloud-common/pom.xml
+++ b/by-cloud-common/pom.xml
@@ -1,84 +1,89 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <!-- Maven项目对象模型版本：指定POM文件的XML结构版本 -->
     <modelVersion>4.0.0</modelVersion>
+    <!-- 父项目引用：继承by-cloud父项目的配置和依赖管理 -->
     <parent>
         <groupId>com.by</groupId>
         <artifactId>by-cloud</artifactId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
+    <!-- 通用模块唯一标识符：项目公共组件模块，包含工具类、配置、常量等共享代码 -->
     <artifactId>by-cloud-common</artifactId>
 
     <dependencies>
-        <!--lombok-->
+        <!-- Lombok：通过注解简化Java代码，自动生成getter、setter、构造器等 -->
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <optional>true</optional>
         </dependency>
+        <!-- MySQL连接器：MySQL数据库的JDBC驱动 -->
         <dependency>
             <groupId>com.mysql</groupId>
             <artifactId>mysql-connector-j</artifactId>
         </dependency>
-        <!-- MyBatis-Plus Generator -->
+        <!-- MyBatis-Plus代码生成器：用于自动生成Entity、Mapper、Service等代码 -->
         <dependency>
             <groupId>com.baomidou</groupId>
             <artifactId>mybatis-plus-generator</artifactId>
             <version>3.4.1</version>
         </dependency>
+        <!-- FreeMarker模板引擎：用于MyBatis-Plus代码生成的模板渲染 -->
         <dependency>
             <groupId>org.freemarker</groupId>
             <artifactId>freemarker</artifactId>
             <version>2.3.31</version>
         </dependency>
+        <!-- Velocity模板引擎：另一种可选的模板引擎，用于代码生成 -->
         <dependency>
             <groupId>org.apache.velocity</groupId>
             <artifactId>velocity-engine-core</artifactId>
             <version>2.3</version>
         </dependency>
+        <!-- SLF4J API：日志门面框架的核心API -->
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
         </dependency>
+        <!-- SLF4J Simple实现：SLF4J的简单日志实现 -->
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-simple</artifactId>
         </dependency>
+        <!-- Spring Boot Web启动器：提供Web应用开发支持 -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
+        <!-- Spring Boot验证启动器：提供Bean验证支持（如@Valid注解） -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-validation</artifactId>
         </dependency>
-
-        <!-- Redis -->
+        <!-- Redis启动器：提供Redis缓存和数据存储支持 -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-redis</artifactId>
         </dependency>
-
-        <!-- Knife4j -->
+        <!-- Knife4j启动器：基于OpenAPI 3的API文档生成工具 -->
         <dependency>
             <groupId>com.github.xiaoymin</groupId>
             <artifactId>knife4j-openapi3-jakarta-spring-boot-starter</artifactId>
         </dependency>
-
-        <!-- Bouncy Castle 库 -->
+        <!-- Bouncy Castle加密库：提供多种加密算法和安全功能 -->
         <dependency>
             <groupId>org.bouncycastle</groupId>
             <artifactId>bcpkix-jdk18on</artifactId>
             <version>1.77</version>
         </dependency>
-        <!-- Hutool SM4加解密 -->
+        <!-- Hutool加密模块：提供SM4等国密算法加解密功能 -->
         <dependency>
             <groupId>cn.hutool</groupId>
             <artifactId>hutool-crypto</artifactId>
             <version>5.8.27</version>
         </dependency>
-
-
     </dependencies>
 
 
