--- a/by-cloud-service-upms/pom.xml
+++ b/by-cloud-service-upms/pom.xml
@@ -18,108 +18,107 @@
     </properties>
 
     <dependencies>
-        <!--nacos-config-->
+        <!-- Nacos 配置中心：Spring Cloud Alibaba Nacos配置管理，实现动态配置更新 -->
         <dependency>
             <groupId>com.alibaba.cloud</groupId>
             <artifactId>spring-cloud-starter-alibaba-nacos-config</artifactId>
         </dependency>
-        <!--nacos-discovery-->
+        <!-- Nacos 服务发现：Spring Cloud Alibaba Nacos服务注册与发现，实现微服务治理 -->
         <dependency>
             <groupId>com.alibaba.cloud</groupId>
             <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
         </dependency>
 
-        <!--SpringBoot通用依赖模块-->
+        <!-- Spring Boot Web 启动器：提供Web应用开发支持，包含Spring MVC和嵌入式Tomcat -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
+        <!-- Spring Boot Actuator 启动器：提供应用监控和管理端点，支持健康检查、指标收集等 -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-actuator</artifactId>
         </dependency>
-        <!--mysql-->
+        <!-- MySQL 驱动：用于连接和操作MySQL数据库 -->
         <dependency>
             <groupId>com.mysql</groupId>
             <artifactId>mysql-connector-j</artifactId>
         </dependency>
-        <!--mybatis-plus-->
+        <!-- MyBatis Plus 启动器：增强MyBatis的ORM框架，提供简化CRUD操作和强大查询功能 -->
         <dependency>
             <groupId>com.baomidou</groupId>
             <artifactId>mybatis-plus-spring-boot3-starter</artifactId>
         </dependency>
-        <!--lombok-->
+        <!-- Lombok 依赖：通过注解简化Java代码，自动生成getter、setter、构造器等 -->
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <optional>true</optional>
         </dependency>
-        <!-- Knife4j -->
+        <!-- Knife4j 启动器：基于OpenAPI 3的API文档生成工具，提供美观的Swagger UI界面 -->
         <dependency>
             <groupId>com.github.xiaoymin</groupId>
             <artifactId>knife4j-openapi3-jakarta-spring-boot-starter</artifactId>
         </dependency>
 
+        <!-- PageHelper 依赖：MyBatis物理分页插件，简化数据库分页查询操作 -->
 <!--        <dependency>-->
 <!--            <groupId>com.github.pagehelper</groupId>-->
 <!--            <artifactId>pagehelper</artifactId>-->
 <!--            <version>6.1.0</version>-->
 <!--        </dependency>-->
 
-        <!-- Redis -->
+        <!-- Redis启动器：提供Redis缓存和数据存储支持 -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-redis</artifactId>
         </dependency>
-
-        <!-- Jackson Databind (for Redis serialization) -->
+        <!-- Jackson数据绑定：用于对象与JSON之间的序列化和反序列化，常用于Redis序列化 -->
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
         </dependency>
-
-        <!-- openfeign依赖 -->
+        <!-- Spring Cloud OpenFeign：声明式HTTP客户端，用于微服务间的远程调用 -->
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-openfeign</artifactId>
         </dependency>
-
-        <!-- loadbalancer依赖 -->
+        <!-- Spring Cloud LoadBalancer：客户端负载均衡器，用于服务实例的选择 -->
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-loadbalancer</artifactId>
         </dependency>
-
-        <!-- JWT -->
+        <!-- JWT API：JSON Web Token的API组件，用于生成和解析JWT令牌 -->
         <dependency>
             <groupId>io.jsonwebtoken</groupId>
             <artifactId>jjwt-api</artifactId>
             <version>0.11.5</version>
         </dependency>
+        <!-- JWT实现：JWT的核心实现库，运行时依赖 -->
         <dependency>
             <groupId>io.jsonwebtoken</groupId>
             <artifactId>jjwt-impl</artifactId>
             <version>0.11.5</version>
             <scope>runtime</scope>
         </dependency>
+        <!-- JWT Jackson支持：使用Jackson处理JWT的JSON序列化，运行时依赖 -->
         <dependency>
             <groupId>io.jsonwebtoken</groupId>
             <artifactId>jjwt-jackson</artifactId>
             <version>0.11.5</version>
             <scope>runtime</scope>
         </dependency>
-        <!-- Spring Security -->
+        <!-- Spring Security启动器：提供应用安全框架，包括认证和授权功能 -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-security</artifactId>
         </dependency>
+        <!-- Spring Security配置：提供Spring Security的配置支持 -->
         <dependency>
             <groupId>org.springframework.security</groupId>
             <artifactId>spring-security-config</artifactId>
         </dependency>
-
-
-        <!-- 通用 -->
+        <!-- 通用模块依赖：包含项目通用的工具类、配置、常量等 -->
         <dependency>
             <groupId>com.by</groupId>
             <artifactId>by-cloud-common</artifactId>
@@ -130,20 +129,29 @@
 
 
     <build>
+        <!-- 资源文件配置 -->
         <resources>
             <resource>
+                <!-- 指定资源文件目录 -->
                 <directory>src/main/resources</directory>
+                <!-- 启用资源过滤，允许在资源文件中使用Maven属性 -->
                 <filtering>true</filtering>
+                <!-- 指定包含的文件类型 -->
                 <includes>
+                    <!-- 包含YAML配置文件 -->
                     <include>**/*.yml</include>
+                    <!-- 包含YAML配置文件（另一种扩展名） -->
                     <include>**/*.yaml</include>
+                    <!-- 包含Properties配置文件 -->
                     <include>**/*.properties</include>
                 </includes>
             </resource>
         </resources>
 
+        <!-- Maven插件配置 -->
         <plugins>
             <plugin>
+                <!-- Spring Boot Maven插件：用于打包、运行和构建Spring Boot应用 -->
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
