--- a/by-springBoot-lesson01/pom.xml
+++ b/by-springBoot-lesson01/pom.xml
@@ -118,19 +118,20 @@
             <artifactId>jackson-databind</artifactId>
         </dependency>
 
-        <!-- 坐标转换 -->
+        <!-- Proj4J 依赖：用于地图投影转换的Java库，支持多种坐标系之间的相互转换 -->
         <dependency>
             <groupId>org.locationtech.proj4j</groupId>
             <artifactId>proj4j</artifactId>
             <version>1.3.0</version>
         </dependency>
 
-        <!-- AOP -->
+        <!-- Spring Boot AOP 启动器：提供面向切面编程（AOP）支持，用于实现日志、事务、权限等横切关注点 -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-aop</artifactId>
         </dependency>
 
+        <!-- 自定义公共模块依赖：包含项目通用的工具类、配置、常量等 -->
         <dependency>
             <groupId>com.by</groupId>
             <artifactId>by-cloud-common</artifactId>
