--- a/by-springBoot-lesson02/src/main/resources/application.yaml
+++ b/by-springBoot-lesson02/src/main/resources/application.yaml
@@ -15,3 +15,19 @@ spring:
       idle-timeout: 300000
       connection-timeout: 20000
       max-lifetime: 1200000
+  # Redis配置
+  data:
+    redis:
+      host: localhost
+      port: 6379
+      password:
+      database: 0
+
+  # Thymeleaf配置
+  thymeleaf:
+    cache: false
+    enabled: true
+    prefix: classpath:/templates/
+    suffix: .html
+    mode: HTML
+    encoding: UTF-8
