--- a/by-springBoot-lesson02/src/main/resources/application.yaml
+++ b/by-springBoot-lesson02/src/main/resources/application.yaml
@@ -5,9 +5,9 @@ spring:
   application:
     name: by-spring-boot-devTools
   datasource:
-    url: jdbc:mysql://localhost:3306/by_master?useUnicode=true&characterEncoding=utf8&useSSL=false&serverTimezone=Asia/Shanghai&allowPublicKeyRetrieval=true
+    url: jdbc:mysql://localhost:3306/by_cloud_01?useUnicode=true&characterEncoding=utf8&useSSL=false&serverTimezone=Asia/Shanghai&allowPublicKeyRetrieval=true
     username: root
-    password: 123456
+    password: root
     driver-class-name: com.mysql.cj.jdbc.Driver
     hikari:
       maximum-pool-size: 20
@@ -20,7 +20,7 @@ spring:
     redis:
       host: localhost
       port: 6379
-      password:
+      password: 123456
       database: 0
 
   # Thymeleaf配置
@@ -31,3 +31,8 @@ spring:
     suffix: .html
     mode: HTML
     encoding: UTF-8
+
+mybatis-plus:
+  configuration:
+    # 标准输出日志（控制台打印SQL）
+    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
