--- a/by-springBoot-lesson02/src/main/resources/application.yaml
+++ b/by-springBoot-lesson02/src/main/resources/application.yaml
@@ -7,7 +7,7 @@ spring:
   datasource:
     url: jdbc:mysql://localhost:3306/by_cloud_01?useUnicode=true&characterEncoding=utf8&useSSL=false&serverTimezone=Asia/Shanghai&allowPublicKeyRetrieval=true
     username: root
-    password: 123456
+    password: root
     driver-class-name: com.mysql.cj.jdbc.Driver
     hikari:
       maximum-pool-size: 20
@@ -20,7 +20,7 @@ spring:
     redis:
       host: localhost
       port: 6379
-      password:
+      password: 123456
       database: 0
 
   # Thymeleaf配置
